@@ -1,8 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-Name=Fyre
-Exec=fyre
-Terminal=false
-Type=Application
-Categories=Application;Graphics;2DGraphics;
-Icon=@DATADIR@fyre-48x48.png
